# AutoCut

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cheng/autocut/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cheng/autocut/: Camera2Activity.java  CameraActivity.java  MainActivity.java
app/src/main/java/com/cheng/autocut/entity/: ViewPoint.java
app/src/main/java/com/cheng/autocut/utils/: AreaUtil.java  AreaUtil2.java  ImageUtil.java
app/src/main/java/com/cheng/autocut/view/: AreaView.java
app/src/main/res/layout/: activity_camrea.xml  activity_camrea2.xml  activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/cheng/autocut/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openvclib/: CMakeLists.txt  build.gradle
openvclib/src/androidTest/java/com/cheng/openvclib/: ExampleInstrumentedTest.java
openvclib/src/main/: AndroidManifest.xml
openvclib/src/main/cpp/: auto_cut.cpp  scanner.cpp
openvclib/src/main/cpp/header/: android_utils.h  scanner.h
openvclib/src/main/java/com/cheng/openvclib/: AutoCut.java  PointUtils.java
openvclib/src/main/res/values/: strings.xml
openvclib/src/test/java/com/cheng/openvclib/: ExampleUnitTest.java
